--- a/ScraperProject/frontend/src/app/components/favoritos/favoritos.component.html
+++ b/ScraperProject/frontend/src/app/components/favoritos/favoritos.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar class="example-toolbar">
 
-    <h1 class="example-app-name">Scrappers App</h1>
+
+    <h1 [routerLink]="['/']" routerLinkActive="router-link-active" class="example-app-name logoTexto"> <img class="logoPagina" src="../../../assets/Niphler.png"> Niphler </h1>
+
     <div class="clearfix" style="max-width: max-content; margin-left: 3%;">
         <div style="max-width: fit-content;">
 
