--- a/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.css
+++ b/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.css
@@ -45,3 +45,18 @@ img:hover {
     /* Make sure the toolbar will stay on top of the content as it scrolls past. */
     z-index: 2;
 }
+
+.logoPagina {
+    height: -webkit-fill-available;
+    width: auto;
+}
+
+@font-face {
+    font-family: niphlerFont;
+    src: url('../../../assets/fonts/StoryBook-KpgA.ttf');
+}
+
+.logoTexto {
+    font-family: niphlerFont;
+    font-size: -webkit-xxx-large;
+}
