--- a/ScraperProject/frontend/src/app/components/carousel/carousel.component.html
+++ b/ScraperProject/frontend/src/app/components/carousel/carousel.component.html
@@ -3,12 +3,24 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="https://zegetech.com/assets/images/blog/algolia-search/image-search.jpg" class="carousel-img d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1><i class="fa fa-search"></i> Busca los productos que te interesen</h1>
+                    <h2>Revisaremos en Mercadolibre, Amazon y Ebay</h2>
+                </div>
             </div>
             <div class="carousel-item">
                 <img src="https://www.pymnts.com/wp-content/uploads/2018/08/vendavo-pricepoint-pricing.jpg" class="carousel-img d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1><i class="fa fa-comments-dollar"></i> Compara los distintos precios</h1>
+                    <h2>(Recuerda que los precios no incluyen envío)</h2>
+                </div>
             </div>
             <div class="carousel-item">
                 <img src="https://www.chargify.com/blog/wp-content/uploads/2018/03/unbundle-cover.png" class="carousel-img d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1><i class="fa fa-laugh-beam"></i> Visita el artículo que desees o registralo a tus favoritos</h1>
+                    <h2>¡Disfruta la búsqueda!</h2>
+                </div>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
