--- a/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.css
+++ b/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.css
@@ -78,6 +78,7 @@ h1.example-app-name {
 .logoPagina {
     height: -webkit-fill-available;
     width: auto;
+    cursor: pointer;
 }
 
 @font-face {
