--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
@@ -65,6 +65,7 @@
     .precio {
         margin-left: 9%;
         float: left;
+        text-shadow: -1px 0 black, 0 3px black, 1px 0 black, 0 -1px black;
     }
     
     .goodPrice {
@@ -91,9 +92,10 @@
             width: auto;
         }
         .mat-card-header .mat-card-title {
-            height: 4vh;
+            height: 7vh;
             overflow: hidden;
             text-overflow: ellipsis;
+            width: auto;
         }
         .contenedorImagen {
             height: 25vh;
