--- a/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
@@ -17,27 +17,33 @@
 
         </div>
 
-        <button *ngIf="!user" class="btn btn-danger botonEscritorio" (click)="signInWithGoogle()">
-            <i class="fa fa-google"></i>
-            Iniciar Sesión
-        </button>
 
         <img *ngIf="user" src="{{ user.photoUrl }}" alt="Avatar" class="avatar botonEscritorio">
         <div *ngIf="user">
             <nav>
                 <a [routerLink]="['/favoritos']" [queryParams]="{idUser: user.email | json  
-                                                                       }"><button class="btn btn-primary botonFavorito botonEscritorio"><i class="fa fa-star" style="color:goldenrod" aria-hidden="true"></i> Favoritos</button></a>
+                                                                           }"><button class="btn btn-primary botonFavorito botonEscritorio"><i class="fa fa-star" style="color:goldenrod" aria-hidden="true"></i> Favoritos</button></a>
             </nav>
         </div>
+        <button *ngIf="user" class="btn btn-danger botonEscritorio" (click)="signOut()">
+            <i class="fa fa-sign-out"></i> Cerrar Sesión
+        </button>
+
+
+        <img *ngIf="!user" src="https://icons.iconarchive.com/icons/papirus-team/papirus-status/256/avatar-default-icon.png" alt="Avatar" class="avatar botonEscritorio">
+
 
         <div *ngIf="!user">
             <nav>
-                <button class="btn btn-primary botonFavorito botonEscritorio" disabled><i class="fa fa-star" style="color:goldenrod" aria-hidden="true"></i> Favoritos</button>
+                <a>
+                    <button class="btn btn-primary botonFavorito botonEscritorio" disabled><i class="fa fa-star" style="color:goldenrod" aria-hidden="true"></i> Favoritos</button>
+                </a>
             </nav>
         </div>
 
-        <button *ngIf="user" class="btn btn-danger botonEscritorio" (click)="signOut()">
-            <i class="fa fa-sign-out"></i> Cerrar Sesión
+        <button *ngIf="!user" class="btn btn-danger botonEscritorio" (click)="signInWithGoogle()">
+            <i class="fa fa-google"></i>
+            Iniciar Sesión
         </button>
 
 
@@ -164,15 +170,20 @@
 
             <app-carousel *ngIf="!listaArticulos && !loading"></app-carousel>
 
-            <div *ngIf="loading" class="cssload-container">
+            <div *ngIf="loading" class="loading-spinner cssload-container">
 
                 <div style="margin-top: 5vh;" class="cssload-whirlpool"></div>
             </div>
 
 
 
+            <div *ngIf="user">
+                <app-articulos [ngClass]="{'esconder': loading}" [articulos]="articulos" [articulosAmazon]="articulosAmazon" [articulosEbay]="articulosEbay" [userEmail]="user.email"></app-articulos>
+            </div>
 
-            <app-articulos [ngClass]="{'esconder': loading}" [articulos]="articulos" [articulosAmazon]="articulosAmazon" [articulosEbay]="articulosEbay" [userEmail]="user.email"></app-articulos>
+            <div *ngIf="!user">
+                <app-articulos [ngClass]="{'esconder': loading}" [articulos]="articulos" [articulosAmazon]="articulosAmazon" [articulosEbay]="articulosEbay"></app-articulos>
+            </div>
 
 
 
