--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
@@ -76,6 +76,7 @@
                                                                                imagen: articulo.imagen | json,
                                                                                stock: articulo.stock | json,
                                                                                comentario: articulo.respuesta | json,
+                                                                               userEmail : userEmail | json,
                                                                                ecommerce: articulo.ecommerce | json,
                                                                                fecha: articulo.fecha | json,
                                                                                respuesta: articulo.respuesta | json,
@@ -118,6 +119,7 @@
                                                                                imagen: articulo.imagen | json,
                                                                                stock: articulo.stock | json,
                                                                                comentario: articulo.respuesta | json,
+                                                                               userEmail : userEmail | json,
                                                                                ecommerce: articulo.ecommerce | json,
                                                                                fecha: articulo.fecha | json,
                                                                                respuesta: articulo.respuesta | json,
