--- a/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
@@ -30,7 +30,7 @@
         </button>
 
 
-        <img *ngIf="!user" src="https://icons.iconarchive.com/icons/papirus-team/papirus-status/256/avatar-default-icon.png" alt="Avatar" class="avatar botonEscritorio">
+        <!-- <img *ngIf="!user" src="https://icons.iconarchive.com/icons/papirus-team/papirus-status/256/avatar-default-icon.png" alt="Avatar" class="avatar botonEscritorio">
 
 
         <div *ngIf="!user">
@@ -39,7 +39,7 @@
                     <button class="btn btn-primary botonFavorito botonEscritorio" disabled><i class="fa fa-star" style="color:goldenrod" aria-hidden="true"></i> Favoritos</button>
                 </a>
             </nav>
-        </div>
+        </div> -->
 
         <button *ngIf="!user" class="btn btn-danger botonEscritorio" (click)="signInWithGoogle()">
             <i class="fa fa-google"></i>
@@ -146,7 +146,7 @@
                     </div>
                     <br>
                     <br>
-                    <div *ngIf="!user">
+                    <!-- <div *ngIf="!user">
                         <br>
                         <br>
                         <br>
@@ -155,7 +155,7 @@
                         <nav>
                             <button class="btn btn-primary botonFavorito " disabled><i class="fa fa-star" style="color:goldenrod" aria-hidden="true"></i> Favoritos</button>
                         </nav>
-                    </div>
+                    </div> -->
 
                     <button *ngIf="user" class="btn btn-danger " (click)="signOut()">
                         <i class="fa fa-sign-out"></i> Cerrar Sesión
