--- a/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.html
+++ b/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.html
@@ -59,3 +59,5 @@ border-radius: 12px;" *ngIf="stock &&  ecommerce=='Mercadolibre'">
     <p style=" 
         border-radius: 12px; font-style: italic; font-size:1.1rem;">"{{respuesta}}"</p>
 </div>
+
+<app-footer></app-footer>
