--- a/ScraperProject/frontend/src/app/components/footer/footer.component.html
+++ b/ScraperProject/frontend/src/app/components/footer/footer.component.html
@@ -12,7 +12,7 @@
 
     <div class="footer-center">
         <div>
-            <a style="color:green" href="#"><i class="fa fa-whatsapp"></i></a>
+            <a style="color:green"><i class="fa fa-whatsapp"></i></a>
             <p style="padding-left: 6px;"> +54 291-4041622</p>
         </div>
         <br>
@@ -25,12 +25,12 @@
     <div class="footer-right">
         <p class="footer-company-about">
             <i style="font-size: x-large;" class="fa fa-user-circle"></i>
-            <span>Acerca de mi</span> Soy estudiante avanzado en la carrera de ingeniería en sistemas de información en la Universidad Nacional del Sur </p>
+            <span>Acerca de mí</span> Soy estudiante avanzado en la carrera de Ingeniería en Sistemas de Información en la Universidad Nacional del Sur </p>
         <div class="footer-icons">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram "></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-youtube"></i></a>
+            <a href='https://www.facebook.com/franco.raniolo.9' target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/franraniolo/?hl=es-la" target="_blank"><i class="fa fa-instagram "></i></a>
+            <a href="https://www.linkedin.com/in/franco-mart%C3%ADn-raniolo-b3b23b178/" target="_blank"><i class="fa fa-linkedin"></i></a>
+
         </div>
     </div>
 </footer>
