--- a/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
@@ -147,7 +147,7 @@
 
         <mat-sidenav-content>
 
-            <app-carousel *ngIf="!listaArticulos && !loading && !hayArticulos"></app-carousel>
+            <app-carousel *ngIf="!listaArticulos && !loading && !hayInfoGuardada "></app-carousel>
 
             <div *ngIf="loading" class="loading-spinner cssload-container">
 
