para que ande github pages

--- a/ScraperProject/frontend/src/app/components/carousel/carousel.component.html
+++ b/ScraperProject/frontend/src/app/components/carousel/carousel.component.html
@@ -2,21 +2,21 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../../../assets/carousel/slider1Final.png" class="carousel-img d-block w-100" alt="...">
+                <img src="assets/carousel/slider1Final.png" class="carousel-img d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="carouselFuente"><i class="fa fa-search"></i> Busca los productos que te interesen</h1>
                     <h2 class="carouselFuente">Revisaremos en Mercadolibre, Amazon y Ebay</h2>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../../assets/carousel/slider2Final.png" class="carousel-img d-block w-100" alt="...">
+                <img src="assets/carousel/slider2Final.png" class="carousel-img d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="carouselFuente"><i class="fa fa-comments-dollar"></i> Compara los distintos precios</h1>
                     <h2 class="carouselFuente">(Recuerda que los precios no incluyen envío)</h2>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../../assets/carousel/slider3Final.png" class="carousel-img d-block w-100" alt="...">
+                <img src="assets/carousel/slider3Final.png" class="carousel-img d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="carouselFuente"><i class="fa fa-laugh-beam"></i> Visita el artículo que desees o registralo a tus favoritos</h1>
                     <h2 class="carouselFuente">¡ Buena Suerte !</h2>
