--- a/ScraperProject/frontend/src/app/components/footer/footer.component.html
+++ b/ScraperProject/frontend/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer-distributed">
 
     <div class="footer-left">
-        <img class="logoPagina" src="../../../assets/Niphler.png">
+        <img class="logoPagina" src="assets/Niphler.png">
 
         <p class="footer-links">
         </p>
