--- a/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar class="example-toolbar">
         <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
         <div class="logoContenedor">
-            <h1 [routerLink]="['/']" routerLinkActive="router-link-active" class="example-app-name logoTexto"> <img class="logoPagina" src="../../../assets/Niphler.png"> Niphler </h1>
+            <h1 [routerLink]="['/']" routerLinkActive="router-link-active" class="example-app-name logoTexto"> <img class="logoPagina" src="assets/Niphler.png"> Niphler </h1>
         </div>
         <div class="clearfix" style="max-width: max-content; margin-left: 3%;">
             <div style="max-width: fit-content;">
@@ -45,7 +45,7 @@
                         <mat-expansion-panel-header>
 
                             <mat-panel-title>
-                                <img class="rounded" src="../../../assets/iconos/MercadolibreIcono.jpeg">
+                                <img class="rounded" src="assets/iconos/MercadolibreIcono.jpeg">
                             </mat-panel-title>
 
                             <mat-panel-description>
@@ -68,7 +68,7 @@
                     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                <img class="rounded" src="../../../assets/iconos/amazonIcono.png">
+                                <img class="rounded" src="assets/iconos/amazonIcono.png">
                             </mat-panel-title>
                             <mat-panel-description>
                                 <p class="filterText amazonFont" style="font-weight: bold; color:#F6900E">amazon</p>
@@ -89,7 +89,7 @@
                     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                <img class="rounded" src="../../../assets/iconos/ebayIcono.png">
+                                <img class="rounded" src="assets/iconos/ebayIcono.png">
                             </mat-panel-title>
                             <mat-panel-description>
                                 <p class="filterText" style="font-weight: bold; color:red">E</p>
