--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
@@ -4,7 +4,7 @@
     <div class="column-center">
         <mat-card class="example-card" *ngFor="let articulo of articulos; index as i;">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image" style="background-image: url('../../../assets/iconos/MercadolibreIcono.jpeg'); background-size: cover;">
+                <div mat-card-avatar class="example-header-image" style="background-image: url('assets/iconos/MercadolibreIcono.jpeg'); background-size: cover;">
                 </div>
                 <mat-card-title> {{articulo.titulo}} </mat-card-title>
                 <mat-card-subtitle> {{articulo.ecommerce}}</mat-card-subtitle>
@@ -47,7 +47,7 @@
     <div class="column-left">
         <mat-card class="example-card" *ngFor="let articulo of articulosAmazon; index as i;">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image" style="background-image: url('../../../assets/iconos/amazonIcono.png'); background-size: cover;">
+                <div mat-card-avatar class="example-header-image" style="background-image: url('assets/iconos/amazonIcono.png'); background-size: cover;">
                 </div>
                 <mat-card-title> {{articulo.titulo}} </mat-card-title>
                 <mat-card-subtitle> {{articulo.ecommerce}}</mat-card-subtitle>
@@ -56,7 +56,7 @@
                 <a [href]=articulo.url target="_blank">
 
                     <img mat-card-image *ngIf="articulo.imagen" class="img_articulo" [src]="articulo.imagen" alt="Imagen de articulo">
-                    <img mat-card-image *ngIf="!articulo.imagen" class="img_articulo" src="../../../assets/no-image-found.png" alt="Imagen de articulo">
+                    <img mat-card-image *ngIf="!articulo.imagen" class="img_articulo" src="assets/no-image-found.png" alt="Imagen de articulo">
                 </a>
             </div>
 
@@ -92,7 +92,7 @@
     <div class="column-right">
         <mat-card class="example-card" *ngFor="let articulo of articulosEbay; index as i;">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image" style="background-image: url('../../../assets/iconos/ebayIcono.png'); background-size: cover;">
+                <div mat-card-avatar class="example-header-image" style="background-image: url('assets/iconos/ebayIcono.png'); background-size: cover;">
                 </div>
                 <mat-card-title> {{articulo.titulo}} </mat-card-title>
                 <mat-card-subtitle> {{articulo.ecommerce}}</mat-card-subtitle>
